--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -10,8 +10,9 @@ Author URL: http://w3layouts.com
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- header{
-  margin-bottom: 150px;
+ *{
+  margin: 0;
+  padding: 0;
  }
  footer{
   width:100%;
@@ -20,21 +21,17 @@ Author URL: http://w3layouts.com
   display: flex;
  }
  iframe{
-
   justify-content: center;
   border-radius: 15%;
  }
  .allform{
   display: flex;
   background-color: #292929;
-  
+  padding: 100px;
  }
  .form{
-  margin-top: 20px;
   display: flex;
   margin-left: 10%;
- 
-
  }
  .former{
   color: black;
